2011-07-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_steps): Don't pass negative heights to t->fillbox
	Bug #3358185

2011-07-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (term_apply_lp_properties):  Handle the case where 
	LT_COLORFROMCOLUMN is passed through as a linetype along with a color.
	Bug #3350570

2011-06-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (draw_edge):  Do not apply the default top/bottom
	colors to line segments belonging to the plot border.
	Bug #3344103

2011-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Pattern-fill definitions must initialize both fill and
	stroke style; otherwise the most recent setting may bleed through.
	Bug #3334216

2011-06-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:  sync to docs version 1.677

2011-06-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics (plot_histeps): Fix range-checking of log-scaled y.
	Bug #3323828

2011-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c term/x11.trm src/gplt_x11.c:
	Remove a set of routines in getcolor.c used only by the x11 terminal
	to pass a color gradient description through the pipe to gnuplot_x11.
	They packed four doubles (value; RGB color) into 8 bytes, losing
	precision and failing to round.  Now we instead use 12 ascii characters
	"0.1234RRGGBB".
	Bug #3322975

2011-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/command.h src/misc.c src/misc.h src/parse.h
	src/scanner.c src/scanner.h src/tables.c src/util.c docs/gnuplot.doc:

	Extend the line input processing to include blocks of commands enclosed
	by curly braces, possibly spanning multiple lines.  This syntax is used
	by new commands:
	    if (<cond>) { ... } else { ... }
	    do for [...] { ... }
	    while (<cond>) { ... }

2011-06-18  Ethan A Merritt  <merritt@u.washington.edu>
