@@ -1,3 +1,9 @@
+2011-06-17  Peter Juhasz  <juhaszp@users.sourceforge.net>
+
+	* src/command.c src/term.c: Fix crash of 'test' after an 
+	unsuccessful 'set term'
+	Bug #3347683
+
 2011-07-11  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_steps): Don't pass negative heights to t->fillbox
